Better standalone/nijotz.com compatibility

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-{% extends "_base.html" %}
-
-{% block title %}Dogebark.sh{% endblock %}
-
-{% block extra_head %}{% raw %}
+<html>
+  <head>
+    <title>Dogebark.sh</title>
+    
 <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/sprintf/0.0.7/sprintf.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.min.js"></script>
@@ -84,9 +83,10 @@
   });
   */
 </script>
-{% endraw %}{% endblock %}
 
-{% block content %}
+  </head>
+  <body>
+    
 <div id="content">
   <h1>DOGEBARK ALERTS</h1>
   <select id="alert-type" data-placeholder="Choose an alert type...">
@@ -105,4 +105,7 @@
 <script>
   $('#alert-type').chosen({disable_search_threshold: 10});
 </script>
-{% endblock %}
+
+  </body>
+</html>
+</html>
